--- a/uglychristmassweater.css
+++ b/uglychristmassweater.css
@@ -855,6 +855,8 @@ html {
 }
 
 #ucs-my-hand {
+  flex: 1 1 100%;
+  width: 100%;
   min-height: 186px;
 }
 
